--- a/camarero/index.html
+++ b/camarero/index.html
@@ -38,6 +38,15 @@
 </head>
 <body>
   <header>
+  <div style="text-align:center;background:#F4F6F8;padding:10px 0;">
+  <label for="mesaSelect" style="font-weight:700;color:#0F766E;">Mesa:</label>
+  <select id="mesaSelect" style="padding:6px 10px;border-radius:10px;border:1px solid #ccc;">
+    <option value="6" selected>Mesa 6</option>
+    <option value="5">Mesa 5</option>
+    <option value="4">Mesa 4</option>
+  </select>
+</div>
+  
     <div class="bar">
       <span>Mesa 6 — Panel Camarero</span>
       <div>
