--- a/tpv/index.html
+++ b/tpv/index.html
@@ -84,7 +84,27 @@
   </main>
 
   <script>
-    // € utils
+    // ==== Canal robusto (BroadcastChannel con fallback a localStorage) ====
+    function makeBus(name, onMessage){
+      const HAS_BC = 'BroadcastChannel' in window;
+      if (HAS_BC) {
+        const bc = new BroadcastChannel(name);
+        if (onMessage) bc.onmessage = (e)=>onMessage(e.data || {});
+        return { post:(data)=>bc.postMessage(data), close:()=>bc.close() };
+      } else {
+        if (onMessage) {
+          window.addEventListener('storage', (e)=>{
+            if (e.key === name && e.newValue) {
+              try { onMessage(JSON.parse(e.newValue)); } catch(_){}
+            }
+          });
+        }
+        return { post:(data)=>{ try{ localStorage.setItem(name, JSON.stringify(data)); }catch(_){ } }, close:()=>{} };
+      }
+    }
+    const bus = makeBus('pagoyo_demo');
+
+    // € utils y estado
     const fmt = n => n.toFixed(2).replace('.', ',') + ' €';
     const tbody = document.getElementById('tbody');
     const totalCell = document.getElementById('totalCell');
@@ -133,40 +153,22 @@
       render();
     });
 
-   // ==== Canal robusto de demo (BroadcastChannel con fallback a localStorage) ====
-function makeBus(name, onMessage){
- // Crear bus robusto (BroadcastChannel o fallback localStorage)
-const bus = makeBus('pagoyo_demo');
- 
-  const HAS_BC = 'BroadcastChannel' in window;
-  if (HAS_BC) {
-    const bc = new BroadcastChannel(name);
-    if (onMessage) bc.onmessage = (e)=>onMessage(e.data || {});
-    return {
-      post: (data)=>bc.postMessage(data),
-      close: ()=>bc.close()
-    };
-  } else {
-    // Fallback: usa eventos de storage entre pestañas
-    if (onMessage) {
-      window.addEventListener('storage', (e)=>{
-        if (e.key === name && e.newValue) {
-          try { onMessage(JSON.parse(e.newValue)); } catch(_){}
-        }
+    // Enviar actualización (SIEMPRE con mesa)
+    document.getElementById('btnUpdate').addEventListener('click', ()=>{
+      const mesa = mesaSel ? mesaSel.value : "6";
+      bus.post({
+        type: 'tpv_ticket_update',
+        mesa,
+        items: items.map(i=>({name:i.name, price:i.price, qty:i.qty})),
+        total: totalCell.textContent
       });
-    }
-    return {
-      post: (data)=>{ try { localStorage.setItem(name, JSON.stringify(data)); } catch(_){} },
-      close: ()=>{}
-    };
-  }
-}
+      alert('Ticket enviado a sala.');
+    });
 
-
-    // Cerrar ticket (con mesa)
+    // Cerrar ticket (SIEMPRE con mesa)
     document.getElementById('btnClose').addEventListener('click', ()=>{
       const mesa = mesaSel ? mesaSel.value : "6";
-      ch.postMessage({ type:'tpv_ticket_close', mesa });
+      bus.post({ type:'tpv_ticket_close', mesa });
       alert('Ticket cerrado.');
       items.length = 0; render();
     });
@@ -181,7 +183,7 @@ const bus = makeBus('pagoyo_demo');
     });
     document.getElementById('btnClear').addEventListener('click', ()=>{ items.length = 0; render(); });
 
-    render(); // estado inicial
+    render();
   </script>
 </body>
 </html>
